--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Biographies, stats, and a battle simulation for comic book heroes and villans (superheroes and supervillans) from publishers such as Marvel and DC Comics.">
-        <title>Superhero Showdown</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Biographies, stats, and a battle simulation for comic book heroes and villans (superheroes and supervillans) from publishers such as Marvel and DC Comics."
+    />
+    <title>Superhero Showdown</title>
 
-        <script src="https://kit.fontawesome.com/838ff0a0f6.js" crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Dekko&family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
+    <script
+      src="https://kit.fontawesome.com/838ff0a0f6.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Dekko&family=Noto+Sans+JP:wght@900&display=swap"
+      rel="stylesheet"
+    />
 
-        <link rel="stylesheet" type="text/css" href="css/general-and-comicPanels.css" /> 
-        <link rel="stylesheet" type="text/css" href="css/grid-and-buttons.css" /> 
-        <link rel="stylesheet" type="text/css" href="css/dialogues.css" />  
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/general-and-comicPanels.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/grid-and-buttons.css" />
+    <link rel="stylesheet" type="text/css" href="css/dialogues.css" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to use this application.</noscript>
+    <header>
+      <a href="https://github.com/DaleDoesDev"
+        ><i class="fab fa-github"></i> DaleDoesDev</a
+      >
+    </header>
 
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to use this application.</noscript>
-        <header>
-            <a href="https://github.com/DaleDoesDev"><i class="fab fa-github"></i> DaleDoesDev</a></i>
-        </header>
+    <div class="comic-pane">
+      <div class="text">
+        <p>
+          Welcome to <strong>Superhero Showdown</strong>! Press
+          <strong>RANDOM</strong> to get started.
+        </p>
+      </div>
+    </div>
 
-        <div class="comic-pane">
-            <div class="text"><p>Welcome to <strong>Superhero Showdown</strong>!
-            Press <strong>RANDOM</strong> to get started.</p>
-            </div>
+    <div class="row">
+      <div class="column">
+        <div class="portraitBanner">Advantage</div>
+        <!-- Invisible at start -->
+        <img
+          class="portrait"
+          src="images/unknownChar.jpg"
+          alt="A portrait style image of a random superhero or supervillan"
+        />
+        <button class="btn"><strong>RANDOM</strong></button>
+        <button class="btn hiddenBtn"><strong>BATTLE</strong></button>
+      </div>
+      <div class="column">
+        <div class="dialogue blueDialogue">
+          <span class="charName"></span>
+          <ul>
+            <li>Full Name: <span class="fullName"></span></li>
+            <li>Alignment: <span class="alignment"></span></li>
+            <li>Base: <span class="base"></span></li>
+            <li>First Appearance: <span class="firstAppear"></span></li>
+            <li>Publisher: <span class="publisher"></span></li>
+          </ul>
         </div>
+      </div>
+    </div>
 
-        <row class="row">
-            <column class="column">
-                <div class="portraitBanner">Advantage</div> <!-- Invisible at start -->
-                <img class="portrait" src="images/unknownChar.jpg" alt="A portrait style image of a random superhero or supervillan">
-                <button class="btn"><strong>RANDOM</strong></button>
-                <button class="btn hiddenBtn"><strong>BATTLE</strong></button>
-            </column>
-            <column class="column">
-                <div class="dialogue blueDialogue">
-                    <span class="charName"></span>
-                    <ul>
-                        <li>Full Name: <span class="fullName"></span></li>
-                        <li>Alignment: <span class="alignment"></span></li>
-                        <li>Base: <span class="base"></span> </li>
-                        <li>First Appearance: <span class="firstAppear"></span></li>
-                        <li>Publisher: <span class="publisher"></span></li>
-                    </ul>
-                </div>
-            </column>          
-        </row>
+    <!-- IE check (unsupported) -->
+    <script>
+      if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
+        window.location = "microsoft-edge:" + window.location;
+        setTimeout(function () {
+          window.location = "https://go.microsoft.com/fwlink/?linkid=2135547";
+        }, 1);
+      }
+    </script>
 
-        <!-- IE check (unsupported) -->
-        <script>
-        if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
-            window.location = 'microsoft-edge:' + window.location;
-            setTimeout(function() {
-            window.location = 'https://go.microsoft.com/fwlink/?linkid=2135547';
-            }, 1);
-        }
-        </script>
- 
-        <script src="/app/home/index.js" type="module"></script>   
-    </body>
+    <script src="/app/home/index.js" type="module"></script>
+  </body>
 </html>
